--- a/CSS/main.css
+++ b/CSS/main.css
@@ -214,33 +214,20 @@ nav .bullet:hover .tooltip {
 }
 
 /* Start Landing Page*/
-article {
-  min-height: 100vh;
-  background-image: url(/IMG/01.jpeg);
-  background-size: cover;
-  position: relative;
-  transition: 0.8s;
-}
-article::before {
-  content: "";
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  left: 0;
-  top: 0;
-  background-color: rgb(0, 0, 0, 0.6);
-}
 header {
   width: 100%;
-  position: relative;
+  position: fixed;
+  z-index: 99;
+  display: block;
+}
+header .container {
   color: white;
   display: flex;
   justify-content: space-between;
   align-items: center;
   padding: 30px;
-  position: relative;
 }
-header > i {
+header .container i {
   font-size: 22px;
   cursor: pointer;
   opacity: 0;
@@ -261,7 +248,7 @@ header ul a:hover {
   color: var(--mcolor);
 }
 @media (max-width: 767px) {
-  header > i {
+  header .container i {
     opacity: 1;
   }
   header ul {
@@ -297,30 +284,59 @@ header ul a:hover {
     cursor: pointer;
     padding-left: 30px;
   }
-  article h1 {
-    font-size: 30px;
-  }
 }
-article .text {
-  width: 95%;
-  color: #fff;
+
+/* Start Article */
+article {
+  position: relative;
+  height: 100vh;
+  width: 100%;
+  background: linear-gradient(rgb(35, 7, 49), rgb(16, 0, 34));
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  overflow: hidden;
+  transition: 1;
+}
+article img {
   position: absolute;
-  text-align: center;
-  left: 50%;
-  top: 50%;
-  transform: translate(-50%, -50%);
+  background-size: cover;
+  width: 100%;
+  height: 100vh;
+  object-fit: cover;
 }
-article .text h1 span {
+article #moon {
+  mix-blend-mode: screen;
+  transform: translateY(80px);
+}
+article h1 {
+  transform: translateY(-150px);
+  font-style: italic;
+  color: white;
+  font-size: 0;
+  position: fixed;
+}
+article h1 span {
   color: var(--mcolor);
 }
-article .text p {
-  margin: 0;
-  font-size: 20px;
-  line-height: 1.6;
-  max-width: 100%;
+@media (max-width: 767px) {
+  article #boat {
+    width: calc(100% + 60px);
+    left: 0;
+    transform: translateX(-90px);
+  }
 }
 
 /* Start About Section */
+.about::before {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 40px;
+  top: 0;
+  background: linear-gradient(to bottom, #1a0818, white);
+  z-index: 98;
+}
 .about .container {
   display: flex;
   justify-content: center;
@@ -600,7 +616,8 @@ form {
   align-items: center;
   gap: 20px;
 }
-form .left, form .right {
+form .left,
+form .right {
   width: 49%;
 }
 @media (max-width: 767px) {
